[gd_scene load_steps=3 format=3 uid="uid://dtx7fwfraxlcs"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_o1v8u"]
[ext_resource type="PackedScene" uid="uid://dw0rs88acy384" path="res://scenes/confirm_quit.tscn" id="2_23m7v"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1v8u")

[node name="playButton" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 480.0
offset_right = 352.0
offset_bottom = 576.0
text = "PLAY"

[node name="optionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 480.0
offset_right = 720.0
offset_bottom = 576.0
text = "OPTIONS"

[node name="quitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 480.0
offset_right = 1088.0
offset_bottom = 576.0
text = "QUIT"

[node name="confirmQuit" parent="." instance=ExtResource("2_23m7v")]
layout_mode = 1

[connection signal="quitFromMenu" from="." to="confirmQuit" method="_on_main_menu_quit_from_menu"]
[connection signal="pressed" from="playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="quitButton" to="." method="_on_quit_button_pressed"]
